# Learn-Rust-from-Book-and-Playground

./: Cargo.toml  README.md
chapters/: new.sh  run.sh
chapters/chapter_01/src/: main.rs
chapters/chapter_02/src/: main.rs
labs/: new.sh  run.sh
labs/lab_borrowing/: Cargo.toml
labs/lab_borrowing/src/: main.rs
labs/lab_condition/: Cargo.toml
labs/lab_condition/src/: main.rs
labs/lab_loop/: Cargo.toml
labs/lab_loop/src/: main.rs
labs/lab_loop_for/: Cargo.toml
labs/lab_loop_for/src/: main.rs
labs/lab_ownership/: Cargo.toml
labs/lab_ownership/src/: main.rs
labs/lab_reference/: Cargo.toml  README.md
labs/lab_reference/src/: main.rs
labs/lab_slice/: Cargo.toml
labs/lab_slice/src/: main.rs
labs/lab_trait/: Cargo.toml
labs/lab_trait/src/: main.rs
notes/: CONDITION.md  DATA_TYPE.md  NUMBER_LITERALS.md  OWNERSHIP.md  Q_n_A.md  README.md
playgrounds/: run.sh
playgrounds/cpu/src/: main.rs
playgrounds/guide_learn/: Cargo.toml
playgrounds/guide_learn/src/: main.rs
projects/: run.sh
rustlings/exercises/01_variables/: variables3.rs
rustlings/exercises/03_if/: if1.rs  if3.rs
rustlings/exercises/04_primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types4.rs  primitive_types5.rs
rustlings/exercises/06_move_semantics/: move_semantics3.rs
rustlings/exercises/07_structs/: structs1.rs
rustlings/exercises/08_enums/: enums3.rs
rustlings/exercises/09_strings/: strings3.rs  strings4.rs
rustlings/exercises/quizzes/: quiz1.rs
