[workspace]
resolver = "3"
members = [
  "chapters/chapter_01"
, "chapters/chapter_02", "labs/lab_borrowing", "labs/lab_condition", "labs/lab_loop", "labs/lab_loop_for", "labs/lab_ownership", "labs/lab_reference", "labs/lab_slice", "labs/lab_trait", "playgrounds/cpu", "playgrounds/guide_learn", "projects/algorithm", "rustlings"]
